create table pokerman.blind_structures (created_at timestamp(6) not null, created_by bigint not null, id bigint generated by default as identity, updated_at timestamp(6) not null, blind_structures_name varchar(255) not null, primary key (id));
create table pokerman.chip_sets (equipment_id bigint not null, id bigint generated by default as identity, chip_set_name varchar(255) not null, primary key (id));
create table pokerman.chip_values (chip_value integer not null, quantity integer not null, chip_set_id bigint not null, id bigint generated by default as identity, primary key (id));
create table pokerman.equipment_types (id bigint generated by default as identity, description varchar(255), type_name varchar(255) not null unique, primary key (id));
create table pokerman.equipments (created_at timestamp(6) not null, equipment_type_id bigint not null, id bigint generated by default as identity, updated_at timestamp(6) not null, equipment_name varchar(255) not null, primary key (id));
create table pokerman.levels (ante integer, big_blind integer not null, color_up boolean not null, duration integer not null, level_order integer not null, small_blind integer not null, blind_structure_id bigint not null, id bigint generated by default as identity, level_type varchar(31) not null, primary key (id));
create table pokerman.prize_distributions (percentage float(53) not null, position integer not null, id bigint generated by default as identity, specification_id bigint not null, primary key (id));
create table pokerman.prizes (amount float(53) not null, created_at timestamp(6) not null, id bigint generated by default as identity, tournament_result_id bigint not null, type varchar(255) not null, primary key (id));
create table pokerman.series (accumulated_prize_pool float(53), prize_pool_percentage float(53), created_at timestamp(6), created_by bigint, final_tournament_id bigint, id bigint generated by default as identity, updated_at timestamp(6), description varchar(255), series_name varchar(255) unique, primary key (id));
create table pokerman.series_tournaments (prize_pool_percentage float(53), id bigint generated by default as identity, series_id bigint, tournament_id bigint, primary key (id));
create table pokerman.starting_stack_chips (quantity integer not null, chip_value_id bigint not null, id bigint generated by default as identity, starting_stack_id bigint not null, primary key (id));
create table pokerman.starting_stacks (created_at timestamp(6) not null, created_by bigint not null, id bigint generated by default as identity, updated_at timestamp(6) not null, stack_name varchar(255) not null, primary key (id));
create table pokerman.statuses (id bigint generated by default as identity, description varchar(255), status_name varchar(255) unique, primary key (id));
create table pokerman.tournament_results (bounties_won integer, points integer not null, position integer not null, won_prize boolean, created_at timestamp(6) not null, id bigint generated by default as identity, tournament_id bigint not null, user_id bigint not null, primary key (id));
create table pokerman.tournament_rounds (remaining_time integer, actual_start_time timestamp(6), end_time timestamp(6), id bigint generated by default as identity, level_id bigint not null, paused_time timestamp(6), round_status_id bigint not null, scheduled_start_time timestamp(6), tournament_id bigint not null, primary key (id));
create table pokerman.tournament_specification (buy_in float(53) not null, free_to_play boolean not null, guaranteed_prize_pool float(53), late_registration_period integer, max_participants integer, max_rebuys integer, blind_structure_id bigint, bounty bigint, id bigint generated by default as identity, rebuy_end_time timestamp(6), starting_stack_id bigint, tournament_type_id bigint not null, primary key (id));
create table pokerman.tournament_types (id bigint generated by default as identity, description varchar(255), type_name varchar(255) unique, primary key (id));
create table pokerman.tournaments (actual_start_time timestamp(6), created_at timestamp(6) not null, created_by bigint not null, current_round_id bigint unique, end_time timestamp(6), id bigint generated by default as identity, scheduled_start_time timestamp(6), series_id bigint, specification_id bigint not null, status_id bigint not null, updated_at timestamp(6) not null, description varchar(255), tournament_name varchar(255) not null, primary key (id));
create table pokerman.user_activity_logs (activity_timestamp timestamp(6) not null, id bigint generated by default as identity, user_id bigint not null, activity_action varchar(255) not null, details varchar(255), primary key (id));
create table pokerman.users (is_admin boolean, created_at timestamp(6), id bigint generated by default as identity, updated_at timestamp(6), email varchar(255), password varchar(255), username varchar(255), primary key (id));
create table admin_permissions (id bigint generated by default as identity, description varchar(255), permission_name varchar(255) not null, primary key (id));
create table admin_user_permissions (admin_permission_id bigint not null, id bigint generated by default as identity, user_id bigint not null, primary key (id));
create table invitations (from_user_id bigint not null, id bigint generated by default as identity, sent_at timestamp(6) not null, status_id bigint not null, tournament_id bigint not null, user_id bigint, email varchar(255), primary key (id));
create table notifications (is_read boolean not null, id bigint generated by default as identity, sent_at timestamp(6) not null, user_id bigint not null, message varchar(255) not null, primary key (id));
create table poker_tables (seats integer not null, equipment_id bigint not null, id bigint generated by default as identity, primary key (id));
create table specification_equipments (equipment_id bigint not null, specification_id bigint not null);
create table table_balance_logs (seat_number integer not null, from_table_id bigint not null, id bigint generated by default as identity, moved_at timestamp(6) not null, to_table_id bigint not null, tournament_id bigint not null, user_id bigint not null, primary key (id));
create table table_seating (is_dealer boolean not null, seat_number integer not null, created_at timestamp(6) not null, id bigint generated by default as identity, table_id bigint not null, tournament_id bigint not null, updated_at timestamp(6) not null, user_id bigint not null, primary key (id));
create table user_permissions (can_edit_players boolean, can_edit_prize_distribution boolean, can_start_pause_stop boolean, id bigint generated by default as identity, tournament_id bigint not null, user_id bigint not null, primary key (id));
create table user_tournaments (tournament_id bigint not null, user_id bigint not null);
alter table if exists pokerman.blind_structures add constraint FK8kx047teq0icm2b34k62r54ik foreign key (created_by) references pokerman.users;
alter table if exists pokerman.chip_sets add constraint FK7scxtk0jnb9xr8p93x1yi04qy foreign key (equipment_id) references pokerman.equipments;
alter table if exists pokerman.chip_values add constraint FKow7x6kwto7dwalipdaxh0cmii foreign key (chip_set_id) references pokerman.chip_sets;
alter table if exists pokerman.equipments add constraint FK55p6m0v9kxog5sjfl722fgbt8 foreign key (equipment_type_id) references pokerman.equipment_types;
alter table if exists pokerman.levels add constraint FKey6drn5c3hbtdjbxxq373wgix foreign key (blind_structure_id) references pokerman.blind_structures;
alter table if exists pokerman.prize_distributions add constraint FKfk2bwsbvbs4ayhpm65kjdvmo foreign key (specification_id) references pokerman.tournament_specification;
alter table if exists pokerman.prizes add constraint FK84qx3r1ct2o03iknn18hd4fu5 foreign key (tournament_result_id) references pokerman.tournament_results;
alter table if exists pokerman.series add constraint FKit9xuhijj1sr30xihwikew938 foreign key (created_by) references pokerman.users;
alter table if exists pokerman.series add constraint FKd67lvkcxumrna4h2o8dlw6whq foreign key (final_tournament_id) references pokerman.tournaments;
alter table if exists pokerman.series_tournaments add constraint FKl4qa4jjlb3vgax9hhpuwv7nff foreign key (series_id) references pokerman.series;
alter table if exists pokerman.series_tournaments add constraint FKoaqcw993ssmo1dtp57834ciyq foreign key (tournament_id) references pokerman.tournaments;
alter table if exists pokerman.starting_stack_chips add constraint FKogaxhocnbrblqg1yiem82hno8 foreign key (chip_value_id) references pokerman.chip_values;
alter table if exists pokerman.starting_stack_chips add constraint FKr6keiy61ftc8c26i54h4w3eb0 foreign key (starting_stack_id) references pokerman.starting_stacks;
alter table if exists pokerman.starting_stacks add constraint FKsnxa6if2h7bvpdqln22a31r50 foreign key (created_by) references pokerman.users;
alter table if exists pokerman.tournament_results add constraint FK1qkwun2ybg0cel6ejoys64xgs foreign key (tournament_id) references pokerman.tournaments;
alter table if exists pokerman.tournament_results add constraint FKxg0oj6skytja3viv3tqnr5oo foreign key (user_id) references pokerman.users;
alter table if exists pokerman.tournament_rounds add constraint FKc3tsqsocmv1up2h97q194e629 foreign key (level_id) references pokerman.levels;
alter table if exists pokerman.tournament_rounds add constraint FKhb566guldmbg8apito8yxv7ij foreign key (round_status_id) references pokerman.statuses;
alter table if exists pokerman.tournament_rounds add constraint FKogdi0xmnrcooq9e1rnge3mxfc foreign key (tournament_id) references pokerman.tournaments;
alter table if exists pokerman.tournament_specification add constraint FKn5q8f6mn5e0v6kcumjxdr6t6j foreign key (blind_structure_id) references pokerman.blind_structures;
alter table if exists pokerman.tournament_specification add constraint FKn45yd7sqbxnhbjq5ctfvf6dq2 foreign key (starting_stack_id) references pokerman.starting_stacks;
alter table if exists pokerman.tournament_specification add constraint FKnyla8os65i0xfljqsv702ijrb foreign key (tournament_type_id) references pokerman.tournament_types;
alter table if exists pokerman.tournaments add constraint FKg9th3w94s0c70bexogt0g3syw foreign key (created_by) references pokerman.users;
alter table if exists pokerman.tournaments add constraint FKtg9cogwnrslhae70tv29mu1im foreign key (current_round_id) references pokerman.tournament_rounds;
alter table if exists pokerman.tournaments add constraint FKqnxxro06po5iavqib54hg8eyo foreign key (series_id) references pokerman.series;
alter table if exists pokerman.tournaments add constraint FKgdvhtw3odb2qt0obly2xohb0k foreign key (specification_id) references pokerman.tournament_specification;
alter table if exists pokerman.tournaments add constraint FKdmfbxabudpwijjsa00ibooib foreign key (status_id) references pokerman.statuses;
alter table if exists pokerman.user_activity_logs add constraint FKci4pq8q71xm6breqdpko42wrd foreign key (user_id) references pokerman.users;
alter table if exists admin_user_permissions add constraint FKqg0ntf4lwl16ipt5trtefk7u4 foreign key (admin_permission_id) references admin_permissions;
alter table if exists admin_user_permissions add constraint FKcwfry1f1l3cri4vcx2y865y2 foreign key (user_id) references pokerman.users;
alter table if exists invitations add constraint FKei6yegf55segqpc9ck17syqdb foreign key (from_user_id) references pokerman.users;
alter table if exists invitations add constraint FKgdfq8moakcbcyta0yy2in31j foreign key (status_id) references pokerman.statuses;
alter table if exists invitations add constraint FKndoq45woa04kd5vxiobk0pf1o foreign key (tournament_id) references pokerman.tournaments;
alter table if exists invitations add constraint FK4wvuj0rfixe8dttrqk1o4qdh foreign key (user_id) references pokerman.users;
alter table if exists notifications add constraint FK9y21adhxn0ayjhfocscqox7bh foreign key (user_id) references pokerman.users;
alter table if exists poker_tables add constraint FKs0sp4ubvo1n68d8pw4wgwtj1d foreign key (equipment_id) references pokerman.equipments;
alter table if exists specification_equipments add constraint FKq7oxf6tf22eef42qbak2l0l3j foreign key (equipment_id) references pokerman.equipments;
alter table if exists specification_equipments add constraint FK81kdcbedyjh0ljnl6l4pqd2c6 foreign key (specification_id) references pokerman.tournament_specification;
alter table if exists table_balance_logs add constraint FK7foy8gmv4sj58a5scxsi4w6r1 foreign key (from_table_id) references poker_tables;
alter table if exists table_balance_logs add constraint FKmiqepmnt3rlkpi15k7c66nejl foreign key (to_table_id) references poker_tables;
alter table if exists table_balance_logs add constraint FKb52l9e5v2dblb424v4npau5nb foreign key (tournament_id) references pokerman.tournaments;
alter table if exists table_balance_logs add constraint FKsyovin6yf3d1010d62p5pkkrb foreign key (user_id) references pokerman.users;
alter table if exists table_seating add constraint FKl82q9scd30qyknbw48txikkg6 foreign key (table_id) references poker_tables;
alter table if exists table_seating add constraint FK135ht0pt4ay9h7h16vdmmxj65 foreign key (tournament_id) references pokerman.tournaments;
alter table if exists table_seating add constraint FKhcss0a5er07o8lkkjc8qqsak6 foreign key (user_id) references pokerman.users;
alter table if exists user_permissions add constraint FKegublh7kw15d39ugh2crbjomk foreign key (tournament_id) references pokerman.tournaments;
alter table if exists user_permissions add constraint FKkowxl8b2bngrxd1gafh13005u foreign key (user_id) references pokerman.users;
alter table if exists user_tournaments add constraint FKekgj605ocwn1iyxdgk6o57jgq foreign key (user_id) references pokerman.users;
alter table if exists user_tournaments add constraint FKcpwvxxkn4djslj3mc7r7vbi7c foreign key (tournament_id) references pokerman.tournaments;
create table pokerman.blind_structures (created_at timestamp(6) not null, created_by bigint not null, id bigint generated by default as identity, updated_at timestamp(6) not null, blind_structures_name varchar(255) not null, primary key (id));
create table pokerman.chip_sets (equipment_id bigint not null, id bigint generated by default as identity, chip_set_name varchar(255) not null, primary key (id));
create table pokerman.chip_values (chip_value integer not null, quantity integer not null, chip_set_id bigint not null, id bigint generated by default as identity, primary key (id));
create table pokerman.equipment_types (id bigint generated by default as identity, description varchar(255), type_name varchar(255) not null unique, primary key (id));
create table pokerman.equipments (created_at timestamp(6) not null, equipment_type_id bigint not null, id bigint generated by default as identity, updated_at timestamp(6) not null, equipment_name varchar(255) not null, primary key (id));
create table pokerman.levels (ante integer, big_blind integer not null, color_up boolean not null, duration integer not null, level_order integer not null, small_blind integer not null, blind_structure_id bigint not null, id bigint generated by default as identity, level_type varchar(31) not null, primary key (id));
create table pokerman.prize_distributions (percentage float(53) not null, position integer not null, id bigint generated by default as identity, specification_id bigint not null, primary key (id));
create table pokerman.prizes (amount float(53) not null, created_at timestamp(6) not null, id bigint generated by default as identity, tournament_result_id bigint not null, type varchar(255) not null, primary key (id));
create table pokerman.series (accumulated_prize_pool float(53), prize_pool_percentage float(53), created_at timestamp(6), created_by bigint, final_tournament_id bigint, id bigint generated by default as identity, updated_at timestamp(6), description varchar(255), series_name varchar(255) unique, primary key (id));
create table pokerman.series_tournaments (prize_pool_percentage float(53), id bigint generated by default as identity, series_id bigint, tournament_id bigint, primary key (id));
create table pokerman.starting_stack_chips (quantity integer not null, chip_value_id bigint not null, id bigint generated by default as identity, starting_stack_id bigint not null, primary key (id));
create table pokerman.starting_stacks (created_at timestamp(6) not null, created_by bigint not null, id bigint generated by default as identity, updated_at timestamp(6) not null, stack_name varchar(255) not null, primary key (id));
create table pokerman.statuses (id bigint generated by default as identity, description varchar(255), status_name varchar(255) unique, primary key (id));
create table pokerman.tournament_results (bounties_won integer, points integer not null, position integer not null, won_prize boolean, created_at timestamp(6) not null, id bigint generated by default as identity, tournament_id bigint not null, user_id bigint not null, primary key (id));
create table pokerman.tournament_rounds (remaining_time integer, actual_start_time timestamp(6), end_time timestamp(6), id bigint generated by default as identity, level_id bigint not null, paused_time timestamp(6), round_status_id bigint not null, scheduled_start_time timestamp(6), tournament_id bigint not null, primary key (id));
create table pokerman.tournament_specification (buy_in float(53) not null, free_to_play boolean not null, guaranteed_prize_pool float(53), late_registration_period integer, max_participants integer, max_rebuys integer, blind_structure_id bigint, bounty bigint, id bigint generated by default as identity, rebuy_end_time timestamp(6), starting_stack_id bigint, tournament_type_id bigint not null, primary key (id));
create table pokerman.tournament_types (id bigint generated by default as identity, description varchar(255), type_name varchar(255) unique, primary key (id));
create table pokerman.tournaments (actual_start_time timestamp(6), created_at timestamp(6) not null, created_by bigint not null, current_round_id bigint unique, end_time timestamp(6), id bigint generated by default as identity, scheduled_start_time timestamp(6), series_id bigint, specification_id bigint not null, status_id bigint not null, updated_at timestamp(6) not null, description varchar(255), tournament_name varchar(255) not null, primary key (id));
create table pokerman.user_activity_logs (activity_timestamp timestamp(6) not null, id bigint generated by default as identity, user_id bigint not null, activity_action varchar(255) not null, details varchar(255), primary key (id));
create table pokerman.users (is_admin boolean, created_at timestamp(6), id bigint generated by default as identity, updated_at timestamp(6), email varchar(255), password varchar(255), username varchar(255), primary key (id));
create table admin_permissions (id bigint generated by default as identity, description varchar(255), permission_name varchar(255) not null, primary key (id));
create table admin_user_permissions (admin_permission_id bigint not null, id bigint generated by default as identity, user_id bigint not null, primary key (id));
create table invitations (from_user_id bigint not null, id bigint generated by default as identity, sent_at timestamp(6) not null, status_id bigint not null, tournament_id bigint not null, user_id bigint, email varchar(255), primary key (id));
create table notifications (is_read boolean not null, id bigint generated by default as identity, sent_at timestamp(6) not null, user_id bigint not null, message varchar(255) not null, primary key (id));
create table poker_tables (seats integer not null, equipment_id bigint not null, id bigint generated by default as identity, primary key (id));
create table specification_equipments (equipment_id bigint not null, specification_id bigint not null);
create table table_balance_logs (seat_number integer not null, from_table_id bigint not null, id bigint generated by default as identity, moved_at timestamp(6) not null, to_table_id bigint not null, tournament_id bigint not null, user_id bigint not null, primary key (id));
create table table_seating (is_dealer boolean not null, seat_number integer not null, created_at timestamp(6) not null, id bigint generated by default as identity, table_id bigint not null, tournament_id bigint not null, updated_at timestamp(6) not null, user_id bigint not null, primary key (id));
create table user_permissions (can_edit_players boolean, can_edit_prize_distribution boolean, can_start_pause_stop boolean, id bigint generated by default as identity, tournament_id bigint not null, user_id bigint not null, primary key (id));
create table user_tournaments (tournament_id bigint not null, user_id bigint not null);
alter table if exists pokerman.blind_structures add constraint FK8kx047teq0icm2b34k62r54ik foreign key (created_by) references pokerman.users;
alter table if exists pokerman.chip_sets add constraint FK7scxtk0jnb9xr8p93x1yi04qy foreign key (equipment_id) references pokerman.equipments;
alter table if exists pokerman.chip_values add constraint FKow7x6kwto7dwalipdaxh0cmii foreign key (chip_set_id) references pokerman.chip_sets;
alter table if exists pokerman.equipments add constraint FK55p6m0v9kxog5sjfl722fgbt8 foreign key (equipment_type_id) references pokerman.equipment_types;
alter table if exists pokerman.levels add constraint FKey6drn5c3hbtdjbxxq373wgix foreign key (blind_structure_id) references pokerman.blind_structures;
alter table if exists pokerman.prize_distributions add constraint FKfk2bwsbvbs4ayhpm65kjdvmo foreign key (specification_id) references pokerman.tournament_specification;
alter table if exists pokerman.prizes add constraint FK84qx3r1ct2o03iknn18hd4fu5 foreign key (tournament_result_id) references pokerman.tournament_results;
alter table if exists pokerman.series add constraint FKit9xuhijj1sr30xihwikew938 foreign key (created_by) references pokerman.users;
alter table if exists pokerman.series add constraint FKd67lvkcxumrna4h2o8dlw6whq foreign key (final_tournament_id) references pokerman.tournaments;
alter table if exists pokerman.series_tournaments add constraint FKl4qa4jjlb3vgax9hhpuwv7nff foreign key (series_id) references pokerman.series;
alter table if exists pokerman.series_tournaments add constraint FKoaqcw993ssmo1dtp57834ciyq foreign key (tournament_id) references pokerman.tournaments;
alter table if exists pokerman.starting_stack_chips add constraint FKogaxhocnbrblqg1yiem82hno8 foreign key (chip_value_id) references pokerman.chip_values;
alter table if exists pokerman.starting_stack_chips add constraint FKr6keiy61ftc8c26i54h4w3eb0 foreign key (starting_stack_id) references pokerman.starting_stacks;
alter table if exists pokerman.starting_stacks add constraint FKsnxa6if2h7bvpdqln22a31r50 foreign key (created_by) references pokerman.users;
alter table if exists pokerman.tournament_results add constraint FK1qkwun2ybg0cel6ejoys64xgs foreign key (tournament_id) references pokerman.tournaments;
alter table if exists pokerman.tournament_results add constraint FKxg0oj6skytja3viv3tqnr5oo foreign key (user_id) references pokerman.users;
alter table if exists pokerman.tournament_rounds add constraint FKc3tsqsocmv1up2h97q194e629 foreign key (level_id) references pokerman.levels;
alter table if exists pokerman.tournament_rounds add constraint FKhb566guldmbg8apito8yxv7ij foreign key (round_status_id) references pokerman.statuses;
alter table if exists pokerman.tournament_rounds add constraint FKogdi0xmnrcooq9e1rnge3mxfc foreign key (tournament_id) references pokerman.tournaments;
alter table if exists pokerman.tournament_specification add constraint FKn5q8f6mn5e0v6kcumjxdr6t6j foreign key (blind_structure_id) references pokerman.blind_structures;
alter table if exists pokerman.tournament_specification add constraint FKn45yd7sqbxnhbjq5ctfvf6dq2 foreign key (starting_stack_id) references pokerman.starting_stacks;
alter table if exists pokerman.tournament_specification add constraint FKnyla8os65i0xfljqsv702ijrb foreign key (tournament_type_id) references pokerman.tournament_types;
alter table if exists pokerman.tournaments add constraint FKg9th3w94s0c70bexogt0g3syw foreign key (created_by) references pokerman.users;
alter table if exists pokerman.tournaments add constraint FKtg9cogwnrslhae70tv29mu1im foreign key (current_round_id) references pokerman.tournament_rounds;
alter table if exists pokerman.tournaments add constraint FKqnxxro06po5iavqib54hg8eyo foreign key (series_id) references pokerman.series;
alter table if exists pokerman.tournaments add constraint FKgdvhtw3odb2qt0obly2xohb0k foreign key (specification_id) references pokerman.tournament_specification;
alter table if exists pokerman.tournaments add constraint FKdmfbxabudpwijjsa00ibooib foreign key (status_id) references pokerman.statuses;
alter table if exists pokerman.user_activity_logs add constraint FKci4pq8q71xm6breqdpko42wrd foreign key (user_id) references pokerman.users;
alter table if exists admin_user_permissions add constraint FKqg0ntf4lwl16ipt5trtefk7u4 foreign key (admin_permission_id) references admin_permissions;
alter table if exists admin_user_permissions add constraint FKcwfry1f1l3cri4vcx2y865y2 foreign key (user_id) references pokerman.users;
alter table if exists invitations add constraint FKei6yegf55segqpc9ck17syqdb foreign key (from_user_id) references pokerman.users;
alter table if exists invitations add constraint FKgdfq8moakcbcyta0yy2in31j foreign key (status_id) references pokerman.statuses;
alter table if exists invitations add constraint FKndoq45woa04kd5vxiobk0pf1o foreign key (tournament_id) references pokerman.tournaments;
alter table if exists invitations add constraint FK4wvuj0rfixe8dttrqk1o4qdh foreign key (user_id) references pokerman.users;
alter table if exists notifications add constraint FK9y21adhxn0ayjhfocscqox7bh foreign key (user_id) references pokerman.users;
alter table if exists poker_tables add constraint FKs0sp4ubvo1n68d8pw4wgwtj1d foreign key (equipment_id) references pokerman.equipments;
alter table if exists specification_equipments add constraint FKq7oxf6tf22eef42qbak2l0l3j foreign key (equipment_id) references pokerman.equipments;
alter table if exists specification_equipments add constraint FK81kdcbedyjh0ljnl6l4pqd2c6 foreign key (specification_id) references pokerman.tournament_specification;
alter table if exists table_balance_logs add constraint FK7foy8gmv4sj58a5scxsi4w6r1 foreign key (from_table_id) references poker_tables;
alter table if exists table_balance_logs add constraint FKmiqepmnt3rlkpi15k7c66nejl foreign key (to_table_id) references poker_tables;
alter table if exists table_balance_logs add constraint FKb52l9e5v2dblb424v4npau5nb foreign key (tournament_id) references pokerman.tournaments;
alter table if exists table_balance_logs add constraint FKsyovin6yf3d1010d62p5pkkrb foreign key (user_id) references pokerman.users;
alter table if exists table_seating add constraint FKl82q9scd30qyknbw48txikkg6 foreign key (table_id) references poker_tables;
alter table if exists table_seating add constraint FK135ht0pt4ay9h7h16vdmmxj65 foreign key (tournament_id) references pokerman.tournaments;
alter table if exists table_seating add constraint FKhcss0a5er07o8lkkjc8qqsak6 foreign key (user_id) references pokerman.users;
alter table if exists user_permissions add constraint FKegublh7kw15d39ugh2crbjomk foreign key (tournament_id) references pokerman.tournaments;
alter table if exists user_permissions add constraint FKkowxl8b2bngrxd1gafh13005u foreign key (user_id) references pokerman.users;
alter table if exists user_tournaments add constraint FKekgj605ocwn1iyxdgk6o57jgq foreign key (user_id) references pokerman.users;
alter table if exists user_tournaments add constraint FKcpwvxxkn4djslj3mc7r7vbi7c foreign key (tournament_id) references pokerman.tournaments;
